adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, mundo</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis velit obcaecati quibusdam illo cum officiis impedit iure ipsam error quae nostrum sapiente doloribus eaque aspernatur ut, dolore deleniti nobis illum!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic dolorem, autem odit saepe id maxime, omnis, unde reprehenderit quasi veniam reiciendis enim alias consectetur. Libero, quis rerum. Non, vitae expedita.</p>
 </body>
 </html>
