--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Olá, mundo</h1>
     <hr>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis velit obcaecati quibusdam illo cum officiis impedit iure ipsam error quae nostrum sapiente doloribus eaque aspernatur ut, dolore deleniti nobis illum!</p>
+    <p> Olá, meu nome é Jean Victor! </p>
     <p> meu primeiro site hehe</p>
 </body>
 </html>
